# cpp-labs

./: .gitignore  README.md
krQt/: README.md  main.cpp
laba1/: CMakeLists.txt  README.md  SmartArray.cpp  SmartArray.h  main.cpp
laba1/include/: ArrayOperations.h  Menu.h
laba1/src/: ArrayOperations.cpp  Menu.cpp  main.cpp
laba2/: CMakeLists.txt  README.md  String.cpp  String.h  main.cpp
laba2/include/: Menu.h  String.h
laba2/src/: Menu.cpp  String.cpp  main.cpp
laba2k/: README.md
laba2k/include/: Functions.h  Matrix.h
laba2k/src/: Functions.cpp  Matrix.cpp  main.cpp
laba3/: CMakeLists.txt  README.md
laba3/include/: Circle.h  Menu.h  Shape.h  Square.h  Triangle.h
laba3/src/: Circle.cpp  Menu.cpp  Square.cpp  Triangle.cpp  main.cpp
laba3k/: CMakeLists.txt
laba3k/include/: Fakultet.h  Menu.h  Student.h
laba3k/src/: Fakultet.cpp  Menu.cpp  main.cpp
laba4/: 1.puml  CMakeLists.txt  README.md
laba4/include/: Circle.h  Menu.h  Rectangle.h  RightTriangle.h  Shape.h  Trapezoid.h
laba4/src/: Circle.cpp  Menu.cpp  Rectangle.cpp  RightTriangle.cpp  Trapezoid.cpp  main.cpp
laba5/: 1.puml  CMakeLists.txt  README.md
laba5/include/: Menu.h  Node.h  Queue.h
laba5/src/: Menu.cpp  Queue.cpp  main.cpp
laba6/: CMakeLists.txt  README.md
laba7/: CMakeLists.txt  README.md
laba8/: CMakeLists.txt
lrk1/: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
lrk3/: CMakeLists.txt
lrk4/: 1.puml  CMakeLists.txt
lrk5/: CMakeLists.txt
lrk6/: CMakeLists.txt
lrk6/include/: EnglishLanguageException.h  Menu.h  StringValidator.h  Student.h  StudentFile.h
lrk6/src/: EnglishLanguageException.cpp  Fakultet.cpp  Menu.cpp  StringValidator.cpp  Student.cpp  StudentFile.cpp  main.cpp
lrk7/: CMakeLists.txt
lrk7/include/: Car.h  Cat.h  FileIndexer.h  Menu.h  Object.h  ObjectFile.h  Rose.h
lrk7/src/: Car.cpp  Cat.cpp  FileIndexer.cpp  Menu.cpp  ObjectFile.cpp  Rose.cpp  main.cpp  objects.txt
lrk8/: CMakeLists.txt
tryingQt/: CMakeLists.txt  CalendarWidget.cpp  CalendarWidget.h  Exercise.h  MainWindow.cpp  MainWindow.h  ProgramDialog.cpp  ProgramDialog.h  TrainingDiary.cpp  TrainingDiary.h  TrainingProgram.cpp  TrainingProgram.h  Workout.cpp  Workout.h  WorkoutDialog.cpp  WorkoutDialog.h  main.cpp  workouts.txt
(+115 files in other folders)
