cmake_minimum_required(VERSION 3.28)
project(laba6)

set(CMAKE_CXX_STANDARD 20)

add_executable(laba6 src/main.cpp
        src/Fakultet.cpp
        include/Fakultet.h
        src/main.cpp
        src/Fakultet.cpp
        src/Student.cpp
        include/Student.h
        include/Student.h
        src/main.cpp
        src/Menu.cpp
        include/Menu.h
        include/EnglishLanguageException.h
        src/EnglishLanguageException.cpp
        include/StringValidator.h
        src/StringValidator.cpp
        include/StudentFile.h
        src/StudentFile.cpp)

